fix accordion overflow

--- a/src/components/Body/Body.css
+++ b/src/components/Body/Body.css
@@ -1,6 +1,4 @@
 .Body {
   text-align: initial;
-  display: grid;
   padding: 1.4em;
-  grid-template-columns: repeat(1, 1fr);
 }
